# PRISM-Fold

./: .gitignore  Cargo.toml
.claude/: ALLOC_ZEROS_COMPLETE.md  CLAUDE.md  CUDARC_MIGRATION_REPORT.md  HANDOFF_LBS_IMPLEMENTATION.md  IMPL_PLAN_PART1.md  IMPL_PLAN_PART2.md  IMPL_PLAN_PART3.md  IMPL_PLAN_PART4.md
.claude/commands/: prism-benchmark.md  prism-config-serde.md  prism-cudarc-migrator.md  prism-fluxnet-unifier.md  prism-lbs-optimizer.md  prism-master-orchestrator.md  prism-onnx-integrator.md  prism-whcr-refactor.md
.github/workflows/: ci.yml
benchmark/: download_true_benchmarks.py
benchmark/cryptosite/: run_benchmark.sh
configs/examples/: Cargo.toml
crates/prism/: Cargo.toml
crates/prism-cli/src/: main.rs
crates/prism-core/src/: runtime_config.rs  traits.rs
crates/prism-fluxnet/src/: lib.rs  ultra_controller.rs
crates/prism-gnn/: Cargo.toml
crates/prism-gnn/src/: lib.rs  models.rs  onnx_runtime.rs
crates/prism-gpu/: Cargo.toml
crates/prism-gpu/src/: aatgs.rs  aatgs_integration.rs  lbs.rs  lib.rs  mega_fused.rs  mega_fused_batch.rs  multi_device_pool.rs  multi_gpu_integration.rs  stream_integration.rs  whcr.rs
crates/prism-gpu/src/kernels/: dr_whcr_ultra.cu  mega_fused_pocket_kernel.cu
crates/prism-lbs/: CLAUDE.md  Cargo.toml
crates/prism-lbs/src/: lib.rs  pipeline_integration.rs  unified.rs
crates/prism-phases/src/: phase2_thermodynamic.rs  phase3_quantum.rs  phase4_geodesic.rs  phase6_tda.rs
crates/prism-pipeline/: Cargo.toml
crates/prism/src/: main.rs  metrics_server.rs
foundation/neuromorphic/: Cargo.toml
foundation/prct-core/examples/: gpu_graph_coloring.rs
foundation/prct-core/src/: gpu_thermodynamic_streams.rs
foundation/quantum/: Cargo.toml
kernels/ptx/: active_inference.ptx  cma_es.ptx  dendritic_reservoir.ptx  dendritic_whcr.ptx  ensemble_exchange.ptx  floyd_warshall.ptx  gnn_inference.ptx  molecular_dynamics.ptx  pimc.ptx  quantum.ptx  tda.ptx  thermodynamic.ptx  transfer_entropy.ptx  whcr.ptx
results/lbs_unified_50structures/: dataset_statistics.json  dataset_statistics.txt  prism_lbs_consolidated.json  prism_lbs_full_provenance.json  prism_lbs_results_master.csv  prism_lbs_summary.tsv  provenance_summary.tsv
results/lbs_unified_50structures/coach_format/: 3vhk_predictions.txt  3vsk_predictions.txt  3wmg_predictions.txt  3zeb_predictions.txt  4brr_predictions.txt  5cap_predictions.txt  5ci9_predictions.txt  5ey7_predictions.txt  5j0b_predictions.txt  5j7s_predictions.txt  5j8i_predictions.txt  5jh6_predictions.txt  5jk3_predictions.txt  5k7h_predictions.txt  5m7r_predictions.txt  5m7u_predictions.txt  5ngf_predictions.txt  5nzm_predictions.txt  5ojx_predictions.txt  5st5_predictions.txt  5su2_predictions.txt  5su7_predictions.txt  5w5d_predictions.txt  6fgj_predictions.txt  (+26 more)
scripts/: analyze_prism_benchmark.py  cryptobench_evaluate.py  download_cryptobench_structures.sh  download_ligysis_structures.py  evaluate.sh  fix_all_cudarc_issues.sh  fix_context_clone_htod.py  fix_cudarc_018.sh  fix_cudarc_api.sh  fix_cudarc_api_summary.sh  fix_device_clone_dtoh.py  fix_device_context_vars.py  fix_device_htod_calls.py  fix_dtoh_sync_copy.py  fix_last_11.py  fix_launch_syntax.py  fix_load_ptx_remaining.sh  fix_quantum_cudarc.sh  fix_remaining_issues.sh  fix_stream_launch.py  ligysis_evaluate.py  migrate_cudarc.py  prism_validation_suite_v2.1_aligned.sh  refine_top_hits.sh  run_cryptobench.sh  run_full_validation.sh  run_ligysis_benchmark.sh  run_screening.sh  run_ultra_refinement.sh  setup_cryptosite_benchmark.sh  ultimate_fix.py  validate_basic.sh
scripts/archive/: build_ptx.sh  download_cryptobench_structures.sh  external_benchmark_evaluate.py  final_fix_load_ptx.py  final_htod_migration.py  fix_all_load_ptx.py  fix_alloc_zeros.py  fix_clone_dtoh_2arg.py  fix_cuda_device_to_context.py  fix_cudarc_0_18_api.py  fix_cudarc_imports.sh  fix_cudarc_memory_ops.py  fix_htod_sync_copy.py  fix_load_ptx.py  fix_quantum_cudarc.py  fix_remaining_simple.py  fix_stream_refs.sh  prism_diagnostic.sh  prism_integrity_audit.sh  prism_pocket_diagnostic.sh  prism_quick_diagnostic.sh  run_external_benchmark.sh  run_full_validation.sh
(+180 files in other folders)
