[workspace]
resolver = "2"
members = [
    # Core compute crates
    "crates/prism-core",
    "crates/prism-gpu",
    "crates/prism-geometry",
    "crates/prism-fluxnet",
    "crates/prism-phases",
    "crates/prism-whcr",
    "crates/prism-pipeline",
    "crates/prism-cli",

    # Specialized compute crates
    "crates/prism-ontology",
    "crates/prism-mec",
    "crates/prism-physics",
    "crates/prism-gnn",
    "crates/prism-lbs",

    # Foundation crates (production-grade implementations)
    "foundation/shared-types",
    "foundation/prct-core",
    "foundation/quantum",
    "foundation/neuromorphic",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["PRISM-AI Research Team"]
license = "MIT"
repository = "https://github.com/prism-ai/prism"

[workspace.dependencies]
# Core error handling and async
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# GPU acceleration
cudarc = { version = "0.9", features = ["std"] }

# ONNX Runtime for GNN inference
ort = { version = "2.0", features = ["cuda"] }

# Math and scientific computing
ndarray = "0.15"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
statrs = "0.16"
num-complex = "0.4"
rustfft = "6.2"
ordered-float = "4.2"

# Graph algorithms
petgraph = "0.6"

# Parallelism
rayon = "1.7"

# Telemetry and metrics
prometheus = "0.13"
axum = "0.7"
hyper = "1.0"
log = "0.4"
env_logger = "0.10"

# Database for telemetry
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "6.0"
parking_lot = "0.12"
lazy_static = "1.4"

# Cryptography (for PTX signing)
sha2 = "0.10"
hex = "0.4"

# Inter-crate dependencies (using new paths)
prism-core = { path = "crates/prism-core" }
prism-gpu = { path = "crates/prism-gpu" }
prism-geometry = { path = "crates/prism-geometry" }
prism-fluxnet = { path = "crates/prism-fluxnet" }
prism-phases = { path = "crates/prism-phases" }
prism-whcr = { path = "crates/prism-whcr" }
prism-pipeline = { path = "crates/prism-pipeline" }
prism-ontology = { path = "crates/prism-ontology" }
prism-mec = { path = "crates/prism-mec" }
prism-physics = { path = "crates/prism-physics" }
prism-gnn = { path = "crates/prism-gnn" }
prism-lbs = { path = "crates/prism-lbs" }
shared-types = { path = "foundation/shared-types" }
prct-core = { path = "foundation/prct-core" }

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
