[package]
name = "prism-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
prism-core = { workspace = true, features = ["cuda"] }

# GPU acceleration
cudarc = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Thread-safe data structures
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }

# Lazy static initialization
once_cell = "1.19"

# Parallel processing
rayon = "1.10"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Cryptography (for PTX signature verification)
sha2 = { workspace = true }
hex = { workspace = true }

# Random number generation
rand = { workspace = true }

[dev-dependencies]
# Testing utilities
env_logger = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kernels"
harness = false

[build-dependencies]
# Cryptography for PTX signing
sha2 = { workspace = true }
hex = { workspace = true }

[features]
cuda = []
